--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: quill_html_editor
-description: HTML rich text editor for Android, iOS, and Web, it is built with the powerful Quill Js library. Which is an open source WYSIWYG editor built for the modern web.
+description: HTML rich text editor for Android, iOS, and Web, it is built with
+  the powerful Quill Js library. Which is an open source WYSIWYG editor built
+  for the modern web.
 
 version: 2.2.8
 homepage: https://github.com/the-airbender/quill_html_editor
@@ -11,37 +13,36 @@ environment:
   flutter: ">=2.5.0"
 
 dependencies:
+  bootpay_webview_flutter_platform_interface: ^2.10.1
+  file_picker: ^8.1.6
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  ##### For image picker widget
-  file_picker: ^8.1.6
-  ##### For webveiwx widget
   http: ^1.2.1
   path: ^1.9.0
   pointer_interceptor: ^0.10.1+2
   uuid: ^4.3.3
-  webview_flutter: ^4.4.4
-  webview_flutter_android: ^3.13.2
+  webview_flutter: ^4.10.0
+  webview_flutter_android: ^4.2.0
   webview_flutter_platform_interface: ^2.9.0
-  webview_flutter_wkwebview: ^3.10.2
+  webview_flutter_wkwebview: ^3.16.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
   assets:
-      - packages/quill_html_editor/assets/camera_roll_icon.png
-      - packages/quill_html_editor/assets/h1_dark.png
-      - packages/quill_html_editor/assets/h2_dark.png
-      - packages/quill_html_editor/assets/edit_table.png
-      - packages/quill_html_editor/assets/insert_table.png
-      - packages/quill_html_editor/assets/delete_column.png
-      - packages/quill_html_editor/assets/delete_row.png
-      - packages/quill_html_editor/assets/delete_table.png
-      - packages/quill_html_editor/assets/insert_column_left.png
-      - packages/quill_html_editor/assets/insert_row_above.png
-      - packages/quill_html_editor/assets/insert_row_below.png
-      - packages/quill_html_editor/assets/insert_column_right.png
-      - packages/quill_html_editor/assets/scripts/quill_2.0.0_4_min.js
+    - packages/quill_html_editor/assets/camera_roll_icon.png
+    - packages/quill_html_editor/assets/h1_dark.png
+    - packages/quill_html_editor/assets/h2_dark.png
+    - packages/quill_html_editor/assets/edit_table.png
+    - packages/quill_html_editor/assets/insert_table.png
+    - packages/quill_html_editor/assets/delete_column.png
+    - packages/quill_html_editor/assets/delete_row.png
+    - packages/quill_html_editor/assets/delete_table.png
+    - packages/quill_html_editor/assets/insert_column_left.png
+    - packages/quill_html_editor/assets/insert_row_above.png
+    - packages/quill_html_editor/assets/insert_row_below.png
+    - packages/quill_html_editor/assets/insert_column_right.png
+    - packages/quill_html_editor/assets/scripts/quill_2.0.0_4_min.js
